A little improved cancellation handling. This will get all much better after the libk3b rewrite post-1.0

BUG: 124799

svn path=/trunk/extragear/multimedia/k3b/; revision=605883